--- a/src/home/styles/_home4.scss
+++ b/src/home/styles/_home4.scss
@@ -10,7 +10,7 @@
     width: 55%;
     h3{
       color:$color_orange;
-      font-size: 1.6rem;
+      font-size: 2rem;
       font-weight: 400;
       text-transform: uppercase;
       margin-bottom: 2%;
@@ -18,7 +18,7 @@
     h4{
       font-family: $font_titles;
      
-      font-size: 5rem;
+      font-size: 4.5rem;
       color:$color_text2;
       margin-bottom: 5%;
     }
@@ -58,8 +58,9 @@ h4{
 ul{
   margin-left: 10%;
   margin-right: 10%;
-  font-size: 1.5rem;
+  font-size: 1.6rem;
   line-height: 2.2rem;
+
 }
 h5{
   font-size: 3rem;
@@ -103,9 +104,118 @@ h5{
 }
 
 
+
+@media screen and (max-width: 1024px) {
+
+  .home-section4-container{
+    padding-top: 12vh;
+    width: 100vw;
+    margin-top: 20vh;
+
+    
+  
+  
+    .home-section4-top-container{
+      margin: 0 auto;
+      margin-bottom: 10vh;
+      text-align: center;
+      width: 80%;
+
+      h3{
+        color:$color_orange;
+        font-size: 2rem;
+        font-weight: 400;
+        text-transform: uppercase;
+        margin-bottom: 2%;
+      }
+      h4{
+        font-family: $font_titles;
+       
+        font-size: 3.5rem;
+        color:$color_text2;
+        margin-bottom: 5%;
+      }
+      p{
+        font-size: 1.8rem;
+          line-height: 2.6rem;
+          font-weight: 400;
+          margin-bottom: 1%;
+          color:$color_text1
+      }
+  
+    }
+  
+    .home-section4-plans-container{
+      margin:0 auto;
+      margin-top: 10vh;
+      width: 50%;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      column-gap: 5%;
+      overflow-x: scroll;
+     
+  
+      .home-section-card-container{
+  width: 100vw;
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  
+  h4{
+    font-size: 2.9rem;
+    font-family: $font_titles;
+    margin-left: 10%;
+    margin-right: 10%;;
+  }
+  ul{
+    margin-left: 10%;
+    margin-right: 10%;
+    font-size: 1.5rem;
+    line-height: 2.2rem;
+  }
+  h5{
+    font-size: 3rem;
+  }
+  >.buttons-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    row-gap: 10px;
+    button{
+      background-color: transparent;
+      border: solid 2px;
+      padding: 4%;
+      width: 80%;
+      color:$color_background;
+      border-radius: 5px;
+      border-color: transparent;
+    }
+  }
+  
+  
+  
+      }
+    }
+  
+    .move-to-bottom{
+      background-color: red;
+      margin-top: 0vh;
+      }
+      
+  }
+}
+
+
+
+
 @media screen and (max-width: 678px) {
 
   .home-section4-container{
+    padding-top: 10vh;
     width: 100vw;
     margin-top: 20vh;
   
@@ -117,7 +227,7 @@ h5{
 
       h3{
         color:$color_orange;
-        font-size: 1.6rem;
+        font-size: 2rem;
         font-weight: 400;
         text-transform: uppercase;
         margin-bottom: 2%;
@@ -125,7 +235,7 @@ h5{
       h4{
         font-family: $font_titles;
        
-        font-size: 3.7rem;
+        font-size: 3.5rem;
         color:$color_text2;
         margin-bottom: 5%;
       }
