--- a/src/Plans/styles/_plan.scss
+++ b/src/Plans/styles/_plan.scss
@@ -124,13 +124,171 @@
     }
 
 
+
+    @media screen and (max-width: 1024px) {
+
+
+
+        .plan-container{
+            padding-top: 18vh;
+            padding-bottom: 15vh;
+            width: 100vw;
+            height:fit-content;
+            display: flex;
+            justify-content: center;
+            align-items: start;
+            background-color:#ffff;
+            
+            
+        }
+        
+            .plan-center-container{
+                width:80%;
+                height:fit-content;
+        
+        
+                .plan-center-top-container{
+                    width: 100%;
+                    height: 10vh;
+                    display: flex;
+                    align-items: start;
+                    justify-content: space-between;
+        
+                    >.buttons-container{
+                        width: 25%;
+                        height: 100%;
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: start;
+                        
+                        button{
+                            background-color: transparent;
+                            border: none;
+                            font-size: 1.5rem;
+                            height: 22%;
+                            display: flex;
+                            align-items: center;
+                            svg{
+                                path{
+                                    fill:black
+                                }
+                            }
+                        }
+                       
+                    }
+                    h2{
+                        font-size: 1.2rem;
+                        font-weight: 400;
+                        color:$color_text1
+                    }
+                }
+        
+                .plan-center-bottom-container{
+                    width: 100%;
+                    height: 50vh;
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+        
+                    .plan-image-container{
+                        width:40%;
+                        height: 90%;
+                        display: flex;
+                        align-items: start;
+                
+                        img{
+                            object-fit: cover;
+                            width: 100%;
+                            height: 100%;
+                        
+        
+                        }
+                    }
+                    .plan-info-container{
+                        width: 50%;
+                        height: 100%;
+                        display: flex;
+                        flex-direction: column;
+                        row-gap: 5%;
+        
+                        h3{
+                            font-size:2rem;
+                            font-weight: 400;
+                            line-height: 2.5rem;
+                            margin-bottom: 0%;
+                        }
+        
+                        h4{
+                            font-size:2.2rem;
+                            font-weight: 400;
+                            line-height: 3rem;
+                            margin-bottom: 0%;
+                        }
+                        h5{
+                            font-size:2.2rem;
+                            font-weight: 400;
+                            line-height: 3rem;
+                            margin-bottom: 0%;
+                        }
+                      
+                        >button{
+                            width: 100%;
+                            height: 18%;
+                            background-color: $color_orange;
+                            color:#ffff;
+                            border: none;
+                            border-radius: 6px;
+                            font-size: 1.5rem;
+                            font-weight: 600;
+                        }
+                        .button-transparent{
+                            background-color: transparent;
+                            color:$color_orange;
+                            border: solid 2px $color_orange;
+                        }
+                    }
+                }
+            }
+
+
+
+            .text-container-horizontal-mobile{
+                margin-top: 3vh;
+                
+                h5{
+                    font-size: 1.5rem;
+                    margin-bottom: 1vh;
+                }
+                p{
+                    font-size: 1.4rem;
+                }
+            }
+        
+
+
+
+
+
+
+
+
+
+
+    }
+
+
+
+
+
+
+
     @media screen and (max-width: 678px) {
 
         .plan-container{
       
             height:fit-content;
             padding-top: 9vh;
-         
+            padding-bottom: 0;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -150,7 +308,7 @@
                     justify-content: space-around;
         
                     >.buttons-container{
-                        width: 40%;
+                        width: 42%;
                         height: 100%;
                         display: flex;
                         justify-content: space-between;
