--- a/src/Plans/styles/_testResult.scss
+++ b/src/Plans/styles/_testResult.scss
@@ -32,7 +32,7 @@
         h2{
 
             color:$color_orange;
-            font-size: 1.6rem;
+            font-size: 2rem;
             font-weight: 400;
             text-transform: uppercase;
             margin-bottom: 2%;
@@ -61,12 +61,21 @@
             border-radius: 6px;
             font-size: 1.5rem;
             font-weight: 600;
+            transition: 0.5s;
         }
         >.button-transparent{
             background-color: transparent;
             color:$color_orange;
             border: solid 2px $color_orange;
         }
+        button:hover{
+            opacity: 0.8;
+            scale: 1.05;
+          }
+          button:active{
+            filter: brightness(1.1);
+           
+          }
 
         h4{
             font-size: 2rem;
@@ -114,6 +123,137 @@
 }
 
 
+@media screen and (max-width: 1024px) {
+
+    .test-result-container{
+        padding-top: 12vh;
+        width: 100vw;
+        height: 100vh;
+        background-color:#FBEBD6;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+    }
+    
+    .test-result-center-container{
+        background-color: $color_background;
+        width: 95%;
+        height: 90%;
+        border-radius: 30px;
+        border: solid 2px $color_orange;
+        display: flex;
+        justify-content: space-between;
+    
+        >.internal-container{
+            width: 50%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            row-gap: 2%;
+            text-align: center;
+    
+            h2{
+    
+                color:$color_orange;
+                font-size: 1.5rem;
+                font-weight: 400;
+                text-transform: uppercase;
+                margin-bottom: 0%;
+            }
+    
+            h3{
+                color:$color_text2;
+                font-family: $font_titles;
+                font-size: 2.3rem;
+                font-weight: 400;
+                margin-bottom: 0%;
+            }
+            p{
+                font-size: 1.4rem;
+                line-height: 2.4rem;
+                color:$color_text1;
+            margin-left: 5%;
+            margin-right: 5%        }
+    
+            >button{
+                width: 70%;
+                height: 10%;
+                background-color: $color_orange;
+                color:#ffff;
+                border: none;
+                border-radius: 6px;
+                font-size: 1.4rem;
+                font-weight: 400;
+                transition: 0.5s;
+            }
+            >.button-transparent{
+                background-color: transparent;
+                color:$color_orange;
+                border: solid 2px $color_orange;
+            }
+            button:hover{
+                opacity: 0.8;
+                scale: 1.05;
+              }
+              button:active{
+                filter: brightness(1.1);
+               
+              }
+    
+            h4{
+                font-size: 2rem;
+                font-weight: 400;
+            }
+            ul{
+                list-style: none;
+                font-size: 1.5rem;
+                color:$color_text1;
+                line-height: 3rem;
+                li{
+                    border-bottom: solid 1px rgba($color: gray, $alpha: 0.5);
+                }
+                
+            }
+            h5{
+                font-size: 2.5rem;
+                color:$color_orange;
+                font-weight: 600;
+                text-align: center;
+            }
+            h6{
+                margin-top: 2vh;
+                font-size: 2rem;
+                color:$color_orange;
+                font-weight: 600;
+                text-align: center;
+            }
+            >.bottom-container{
+                border-top: solid 1px rgba($color: gray, $alpha: 0.5);
+                width: 80%;
+                font-size: 1.4rem;
+                font-weight: 600;
+                line-height: 5rem;
+                color:$color_text1;
+                text-decoration: underline;
+                display: flex;
+                justify-content: space-between;
+                >span{
+                    font-size: 1.2rem;
+                    cursor: pointer;
+                }
+            }
+        }
+     
+    }
+    
+
+
+}
+
+
 @media screen and (max-width: 678px) {
 
     .test-result-container{
@@ -145,7 +285,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            row-gap: 3vh;
+            row-gap: 2vh;
             text-align: center;
     
             h2{
@@ -175,7 +315,7 @@
     
             >button{
                 width: 90%;
-                height: 7vh;
+                height: 6vh;
                 background-color: $color_orange;
                 color:#ffff;
                 border: none;
