--- a/src/checkout/styles/_checkout.scss
+++ b/src/checkout/styles/_checkout.scss
@@ -192,6 +192,219 @@ h2{
 }
 
 
+
+
+
+@media screen and (max-width: 1024px) {
+
+    .checkout-container{
+        
+        height: fit-content;
+        min-height: 100vh;
+         background-color:#ffff;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: start;
+        padding-top: 15vh;
+        padding-bottom: 10vh;
+
+        h2{
+            color:$color_text1;
+            font-weight: 400;
+            font-size: 1.2rem;
+            width: 95%;
+            padding-left: 0%;
+            margin: 0 auto;
+            margin-bottom: 2vh;
+            text-align: start;
+     
+      
+        }
+        }
+
+        .checkout-center-container{
+            width: 55%;
+            height: fit-content;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            row-gap: 5vh;
+        }
+
+
+        .checkout-internal-container{
+            width: 100%;
+
+
+            .next-step-button{
+
+                height: 10vh;
+                width: 90%;
+                font-size: 1.6rem;
+          
+            }
+          
+        
+            form{
+                margin-top: 2vh;
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                row-gap: 3vh;
+                h3{
+                    width: 75%;
+                    font-size: 1.9rem;
+                    font-weight: 400;
+                    color:$color_text1;
+                }
+                label{
+                    display: flex;
+                    font-size: 1.2rem;
+                    flex-direction: column;
+                    width: 75%;
+                    row-gap: 3px;
+                    input{
+                        width: 100%;
+                        height:7.5vh;
+                        border-radius: 6px;
+                        border-color: rgba($color:gray, $alpha:0.4);
+                    }
+                    p{
+                        color:red;
+                    
+                    }
+                    .input-error{
+                        border: solid 2px red;
+                       
+                    }
+                }
+        
+                .mp-info-container{
+                    width: 80%;
+                    height: 18%;
+                    display: flex;
+                    align-items: center;
+                    margin-top: 2vh;
+                    >.image-container{
+                        height: 90%;
+                        width: 30%;
+                        img{
+                            object-fit: cover;
+                            height: 100%;
+                        }
+                    }
+                    >.info-container{
+                        height: 100%;
+                        width: 70%;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        padding-left: 5%;
+                        row-gap: 10%;
+                        p{
+                            font-size: 1.3rem;
+                            font-weight: lighter;
+                            line-height: 1.8rem;
+                        }
+                    }
+                }
+        
+                button{
+                    width: 80%;
+                    height: 10vh;
+                    background-color: $color_orange;
+                    color:$color_background;
+                    border: none;
+                    font-size: 1.4rem;
+                    font-weight: 600;
+                    border-radius: 6px;
+                }
+        
+            }
+        
+        
+            .resume-container{
+                width: 100%;
+               max-height: fit-content;
+
+                overflow-y:visible;
+                background-color:#ffff;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                row-gap: 2vh;
+                padding-top: 5vh;
+                padding-bottom: 5vh;
+        
+                >h3{
+                    width: 80%;
+                    font-size: 1.9rem;
+                    font-weight: 400;
+                    color:$color_text1;
+                    margin-bottom: 3%;
+                }
+             
+                .checkout-card-container {
+                    width: 90%;
+                            height: 35vh;
+                            display: flex;
+                    margin: 0 auto;
+                    display: flex;
+                    align-items: center;
+                 padding: 2%;
+                   background-color:$color_background;
+                    img {
+                        object-fit: cover;
+                      height: 80%;
+                      aspect-ratio: 1;
+                    }
+                  
+                    p {
+                        font-size: 1.3rem;
+                      font-weight: 300;
+                    }
+                    strong {
+                      font-size: 1.3rem;
+                      font-weight: 500;
+                    }
+                  }
+        
+             
+        
+                
+              
+            }
+            .card-prince-container{
+                width: 90%;
+                display: flex;
+                justify-content: space-between;
+                padding-top: 5%;
+                padding-bottom: 5%;
+        
+              
+                background-color:$color_background;
+                >p{
+                    font-size: 2rem;
+                    font-weight: 600;
+                    color:$color_text1;
+                    margin-left: 7.5%;
+                    margin-right: 7.5%;
+                    
+                }
+            }
+        }
+
+}
+
+
+
+
+
+
+
+
 @media screen and (max-width: 678px) {
 
     .checkout-container{
