--- a/src/home/styles/_home2.scss
+++ b/src/home/styles/_home2.scss
@@ -6,18 +6,18 @@
   justify-content: center;
   align-items: center;
 
-  .home-section2-center-container{
+  .home-section2-center-container {
     width: 70%;
     display: flex;
     justify-content: center;
     align-items: center;
     column-gap: 8%;
-    .image-container{
+    .image-container {
       width: 26%;
       border-top-left-radius: 50%;
-        border-top-right-radius: 50%;
-     
-      img{
+      border-top-right-radius: 50%;
+
+      img {
         object-fit: cover;
         width: 100%;
         border-top-left-radius: 50%;
@@ -25,72 +25,66 @@
       }
     }
 
-    .text-container{
-     
+    .text-container {
       display: flex;
       max-width: 40%;
       justify-content: end;
       flex-direction: column;
-      h3{
-        color:$color_orange;
-        font-size: 1.6rem;
+      h3 {
+        color: $color_orange;
+        font-size: 2rem;
         font-weight: 400;
         text-transform: uppercase;
         margin-bottom: 2%;
       }
-      h4{
+      h4 {
         font-family: $font_titles;
         font-size: 3rem;
-        color:$color_cyan;
+        color: $color_cyan;
         margin-bottom: 5%;
       }
-      p{
+      p {
         font-size: 1.5rem;
         line-height: 2.2rem;
         font-weight: 400;
         margin-bottom: 2%;
-        color:$color_text1
+        color: $color_text1;
       }
     }
   }
 }
 
-
-@media screen and (max-width: 678px) {
+@media screen and (max-width: 1024px) {
   .home-section2-container {
-
     height: fit-content;
-    padding-top: 9vh;
-    padding-bottom: 10vh;
-  
-    .home-section2-center-container{
+    padding-top: 12vh;
+    padding-bottom: 12vh;
+
+    .home-section2-center-container {
       width: 100%;
-      
-      flex-direction: column;
-      row-gap: 8vh;
-      .image-container{
-        width: 50%;
-  
-        
+
+      flex-direction: row;
+      column-gap: 5vw;
+
+      .image-container {
+        margin-left: 5%;
+        width: 18%;
       }
-  
-      .text-container{
-       
-       
-        max-width: 80%;
-       
-        h3{
-          font-size: 1.6rem;
-  
+
+      .text-container {
+        max-width: 70%;
+        padding-right: 5%;
+
+        h3 {
+          font-size: 2rem;
+
           margin-bottom: 2%;
-          
         }
-        h4{
-         
+        h4 {
           font-size: 2.6rem;
           margin-bottom: 5%;
         }
-        p{
+        p {
           font-size: 1.6rem;
           line-height: 2.2rem;
         }
@@ -99,3 +93,38 @@
   }
 }
 
+@media screen and (max-width: 678px) {
+  .home-section2-container {
+    height: fit-content;
+    padding-top: 9vh;
+    padding-bottom: 10vh;
+
+    .home-section2-center-container {
+      width: 100%;
+
+      flex-direction: column;
+      row-gap: 8vh;
+      .image-container {
+        width: 50%;
+      }
+
+      .text-container {
+        max-width: 80%;
+
+        h3 {
+          font-size: 2rem;
+
+          margin-bottom: 2%;
+        }
+        h4 {
+          font-size: 2.6rem;
+          margin-bottom: 5%;
+        }
+        p {
+          font-size: 1.6rem;
+          line-height: 2.2rem;
+        }
+      }
+    }
+  }
+}
