--- a/src/home/styles/_home4b.scss
+++ b/src/home/styles/_home4b.scss
@@ -62,16 +62,88 @@ img{
     }
 }
 
+
+
+@media screen and (max-width: 1024px) {
+
+    .home-section4b-container{
+        margin-top: 12vh;
+        padding-top: 12vh;
+        width: 100vw;
+        height: 100vh;
+        background-color:rgba($color: $color_orange, $alpha: 0.4);
+        display: flex;
+        align-items: center;
+      
+        
+        .home-section4b-internal-container{
+    width: 50%;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+    color:$color_orange;
+    
+    >.text-container{
+        width: 80%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        row-gap: 5%;
+        h4{
+            font-family: $font_titles;
+            font-size: 2.8rem;
+         
+        }
+        
+        h5{
+            font-size: 2rem;
+            line-height: 3.2rem;
+            font-weight: 400;
+        }
+        
+        button{
+            background-color: $color_orange;
+            border: solid 2px;
+            font-size: 1.6rem;
+            font-weight: 400;
+            padding: 1.5%;
+            width: 80%;
+            height: 14%;
+            color:$color_background;
+            border-radius: 5px;
+            border-color: transparent;
+          }
+    
+    }
+    
+    img{
+        object-fit: cover;
+        height: 75%;
+        max-width: 100%;
+    
+    }
+        }
+    }
+    
+
+}
+
+
 @media screen and (max-width: 678px) {
 
     .home-section4b-container{
+       
+        padding-top: 10vh;
         margin-top: 0vh;
-        height: 90vh;
+        height: 100vh;
         display: flex;
         flex-direction: column;
         row-gap: 5vh;
         align-items: center;
-        padding-top: 5vh;
     
        
       
@@ -93,7 +165,7 @@ img{
         display: flex;
         flex-direction: column;
         justify-content: center;
-        row-gap: 4vh;
+        row-gap: 3vh;
         h4{
             font-family: $font_titles;
             font-size: 3rem;
