--- a/src/home/styles/_slider.scss
+++ b/src/home/styles/_slider.scss
@@ -1,91 +1,181 @@
 @import "../../styles//variables.scss";
 
 
-.wrapper{
+@media screen and (max-width: 1024px) {
+  .wrapper {
+    margin: 0 auto;
     position: relative;
-    width: 100%;
+    width: 80%;
     display: flex;
-align-items: center;
+    align-items: center;
+    justify-content: center;
+  }
 
-}
-
-
-.wrapper .slider{
+  .wrapper .slider {
     width: 100%;
     display: grid;
     grid-auto-flow: column;
     grid-auto-columns: 1fr;
-   
     overflow: auto;
     scroll-behavior: smooth;
-}
+  }
 
-.slider::-webkit-scrollbar{
+  .slider::-webkit-scrollbar {
     display: none;
-}
+  }
 
-
-.slider-card-container{
-   width: 100vw;
-   height: 90vh;
-   display: flex;
-   align-items: center;
-
-   .slider-card-internal-container{
-    margin: 0 auto;
+  .slider-card-container {
+    width: 80vw;
+    height: 80vh;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: space-around;
-    width: 85%;
-    height: 90%;
-    border-radius: 12px;
-    
-    h4{
-      font-size: 3.2rem;
-      font-family: $font_titles;
-      margin-left: 10%;
-      margin-right: 10%;;
-    }
-    ul{
-      margin-left: 10%;
-      margin-right: 10%;
-      font-size: 1.8rem;
-      line-height: 2.5rem;
-    }
-    h5{
-      font-size:4rem;
-    }
-    >.buttons-container{
+
+    .slider-card-internal-container {
+      margin: 0 auto;
       display: flex;
       flex-direction: column;
       align-items: center;
-      width: 100%;
-      row-gap: 10px;
-      button{
-        background-color: transparent;
-        border: solid 2px;
-        padding: 4%;
-        width: 80%;
-        color:$color_background;
-        border-radius: 5px;
-        border-color: transparent;
+      justify-content: space-around;
+      width: 85%;
+      height: 100%;
+      border-radius: 12px;
+
+      h4 {
+        font-size: 3rem;
+        font-family: $font_titles;
+        margin-left: 10%;
+        margin-right: 10%;
       }
-    
-       
+      ul {
+        margin-left: 10%;
+        margin-right: 10%;
+        font-size: 1.8rem;
+        line-height: 2.5rem;
+      }
+      h5 {
+        font-size: 4rem;
+      }
+      > .buttons-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 50%;
+        row-gap: 0x;
+        button {
+          background-color: transparent;
+          border: solid 2px;
+          padding: 4%;
+          width: 80%;
+          color: $color_background;
+          border-radius: 5px;
+          border-color: transparent;
+        }
+      }
     }
+  }
 
-   }
+  .btn-next,
+  .btn-previous {
+    position: absolute;
+    background-color: rgba($color: gray, $alpha: 0.5);
+    height: 13vh;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    svg {
+      height: 50%;
+      aspect-ratio: 1;
+      path {
+        stroke: #ffff;
+        fill: #ffff;
+      }
+    }
+  }
 
-  
+  .btn-next {
+    right: 5%;
+  }
+  .btn-previous {
+    left: 5%;
+  }
 }
 
+@media screen and (max-width: 680px) {
+  .wrapper {
+    position: relative;
+    width: 100%;
+    display: flex;
+    align-items: center;
+  }
 
+  .wrapper .slider {
+    width: 100%;
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: 1fr;
 
+    overflow: auto;
+    scroll-behavior: smooth;
+  }
 
+  .slider::-webkit-scrollbar {
+    display: none;
+  }
 
+  .slider-card-container {
+    width: 100vw;
+    height: 90vh;
+    display: flex;
+    align-items: center;
 
-.btn-next, .btn-previous {
+    .slider-card-internal-container {
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-around;
+      width: 85%;
+      height: 90%;
+      border-radius: 12px;
+
+      h4 {
+        font-size: 3.2rem;
+        font-family: $font_titles;
+        margin-left: 10%;
+        margin-right: 10%;
+      }
+      ul {
+        margin-left: 10%;
+        margin-right: 10%;
+        font-size: 1.8rem;
+        line-height: 2.5rem;
+      }
+      h5 {
+        font-size: 4rem;
+      }
+      > .buttons-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        row-gap: 10px;
+        button {
+          background-color: transparent;
+          border: solid 2px;
+          padding: 4%;
+          width: 80%;
+          color: $color_background;
+          border-radius: 5px;
+          border-color: transparent;
+        }
+      }
+    }
+  }
+
+  .btn-next,
+  .btn-previous {
     position: absolute;
     background-color: rgba($color: gray, $alpha: 0.5);
     height: 10vh;
@@ -94,21 +184,20 @@ align-items: center;
     display: flex;
     justify-content: center;
     align-items: center;
-    svg{
-        height: 50%;
-        aspect-ratio: 1;
-        path{
-            stroke:#ffff;
-            fill:#ffff
-        }
+    svg {
+      height: 50%;
+      aspect-ratio: 1;
+      path {
+        stroke: #ffff;
+        fill: #ffff;
+      }
     }
-}
+  }
 
-.btn-next{
-right: -5%;
-}
-.btn-previous{
+  .btn-next {
+    right: -5%;
+  }
+  .btn-previous {
     left: -5%;
-    }
-
-    
+  }
+}
