--- a/src/questonaryTest/styles/_questionComponent.scss
+++ b/src/questonaryTest/styles/_questionComponent.scss
@@ -20,28 +20,31 @@
   }
 
   .question-component-options-container {
-    width: 20%;
+    width: fit-content;
+    min-width: 20%;
     height: fit-content;
+    min-height: 40%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     row-gap: 2vh;
+
 
     label {
       background-color: #ffff;
       height: 8vh;
       border-radius: 12px;
       display: flex;
-      column-gap: 20px;
       align-items: center;
-      justify-content: start;
+      justify-content: space-around;
       border: solid 2px rgba($color: gray, $alpha: 0.4);
 
       font-size: 2rem;
       color: $color_text1;
       input {
-        height: 37%;
+        height: 40%;
         aspect-ratio: 1;
-        margin-left: 5%;
+      
        
       }
    
@@ -78,6 +81,7 @@
       background-color: transparent;
       border: none;
       margin-left: 8%;
+      transition: 0.5s;
     }
 
     :last-child {
@@ -90,6 +94,15 @@
       border-radius: 6px;
       margin-right: 8%;
     }
+
+    button:hover{
+      opacity: 0.8;
+      scale: 1.05;
+    }
+    button:active{
+      filter: brightness(1.1);
+     
+    }
   }
   >span{
     font-size: 2rem;
@@ -101,6 +114,125 @@
    }
    
 }
+
+
+
+
+@media screen and (max-width: 1024px) {
+
+  .question-component-container {
+    height: auto;
+    min-height: 90vh;
+  
+  
+    > h2 {
+      font-size: 2.8rem;
+      font-family: $font_titles;
+      text-align: center;
+      margin-top: 1%;
+      margin-bottom: 1%;
+      margin-left: 10%;
+      margin-right: 10%;
+    }
+  
+    .question-component-options-container {
+      width: 25%;
+      height: fit-content;
+      min-height: 60%;
+      display: flex;
+      flex-direction: column;
+      row-gap: 2vh;
+  
+      label {
+        background-color: #ffff;
+        height: 11vh;
+        border-radius: 12px;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        border: solid 2px rgba($color: gray, $alpha: 0.4);
+  
+        font-size: 1.8rem;
+        color: $color_text1;
+        input {
+          height: 40%;
+          aspect-ratio: 1;
+        
+         
+        }
+     
+      }
+      .warning{
+          border-color: $color_orange;
+         }
+    }
+  
+    > button {
+      width: 15%;
+      height: 9%;
+      background-color: $color_cyan;
+      color: #ffff;
+      border: none;
+      border-radius: 6px;
+      font-size: 1.5rem;
+      font-weight: 600;
+    }
+  
+    .question-component-buttons-container {
+      bottom: 5%;
+      position: absolute;
+      width: 100%;
+      height: 10%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+  
+      button {
+        font-size: 1.6rem;
+        font-weight: 600;
+        color: $color_cyan;
+        background-color: transparent;
+        border: none;
+        margin-left: 8%;
+        transition: 0.5s;
+      }
+  
+      :last-child {
+        background-color: $color_cyan;
+  
+        color: $color_background;
+        padding: 1%;
+        padding-inline: 5%;
+  
+        border-radius: 6px;
+        margin-right: 8%;
+      }
+  
+      button:hover{
+        opacity: 0.8;
+        scale: 1.05;
+      }
+      button:active{
+        filter: brightness(1.1);
+       
+      }
+    }
+    >span{
+      font-size: 1.6rem;
+      margin-top: 1%;
+      color:#ffff;
+      font-weight: 400;
+      background-color: rgba($color: $color_orange, $alpha: 0.5);
+      padding: 1%;
+     }
+     
+  }
+  
+
+
+}
+
+
 
 
 @media screen and (max-width: 678px) {
@@ -126,6 +258,7 @@
   
     .question-component-options-container {
       width: 50%;
+      min-height: 50%;
       height: fit-content;
       display: flex;
       flex-direction: column;
@@ -136,9 +269,8 @@
         height: 8vh;
         border-radius: 12px;
         display: flex;
-        column-gap: 20px;
         align-items: center;
-        justify-content: start;
+        justify-content: space-around;
         border: solid 2px rgba($color: gray, $alpha: 0.4);
   
         font-size: 2rem;
@@ -146,7 +278,7 @@
         input {
           height: 37%;
           aspect-ratio: 1;
-          margin-left: 5%;
+        
          
         }
      
@@ -158,7 +290,7 @@
   
     > button {
       width: 18%;
-      height: 9%;
+      height: 7%;
       background-color: $color_cyan;
       color: #ffff;
       border: none;
@@ -198,6 +330,7 @@
       }
     }
     >span{
+      text-align: center;
       font-size: 2rem;
       margin-top: 3%;
       color:#ffff;
