--- a/src/ui/styles/_mobileMenu.scss
+++ b/src/ui/styles/_mobileMenu.scss
@@ -1,7 +1,101 @@
-
-
 @import "../../styles//variables.scss";
-.mobile-menu-container{
+
+.mobile-menu-container {
+  position: fixed;
+  z-index: 50;
+  width: 30vw;
+  height: 100vh;
+  background-color: $color_background;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transition: 1s ease;
+  transform: translateX(-200%);
+}
+.mobileMenuOpen {
+  transform: translateX(0%);
+}
+
+.mobile-menu-top-container {
+  position: relative;
+  width: 100%;
+  height: 13%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  img {
+    object-fit: cover;
+    height: 60%;
+  }
+  > .icon-container {
+    height: 50%;
+    position: absolute;
+    right: 5%;
+  }
+}
+
+.mobile-menu-center-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 5vh;
+  list-style: none;
+  font-size: 1.6rem;
+
+  li {
+    margin-left: 10%;
+  }
+}
+
+.mobile-menu-bottom-container {
+  width: 100%;
+  height: 15%;
+  margin-bottom: 5vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 10%;
+
+  > .icon-container {
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    svg {
+      path {
+        fill: $color_cyan;
+      }
+    }
+  }
+}
+
+.mobile-menu-socialMedia-container {
+  width: 100%;
+  height: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  button {
+    height: 100%;
+    width: 70%;
+    border-radius: 6px;
+    color: #ffff;
+    background-color: $color_purple;
+    border: none;
+  }
+
+  > .icon-container {
+    height: 100%;
+  }
+}
+
+
+
+
+
+@media screen and (max-width: 678px) {
+  .mobile-menu-container {
     position: fixed;
     z-index: 50;
     width: 65vw;
@@ -12,96 +106,83 @@
     justify-content: space-between;
     transition: 1s ease;
     transform: translateX(-200%);
-}
-.mobileMenuOpen{
+  }
+  .mobileMenuOpen {
     transform: translateX(0%);
-}
+  }
 
-.mobile-menu-top-container{
+  .mobile-menu-top-container {
     position: relative;
     width: 100%;
     height: 10%;
     display: flex;
     align-items: center;
     justify-content: center;
-    img{
-        
-        object-fit: cover;
-        height: 60%;
+    img {
+      object-fit: cover;
+      height: 60%;
     }
-    >.icon-container{
-        height: 50%;
-        position: absolute;
-        right: 5%;
-
+    > .icon-container {
+      height: 50%;
+      position: absolute;
+      right: 5%;
     }
-}
+  }
 
-.mobile-menu-center-container{
-
+  .mobile-menu-center-container {
     width: 100%;
     display: flex;
     flex-direction: column;
     row-gap: 5vh;
     list-style: none;
     font-size: 1.8rem;
-   
-    li{
-        margin-left:10%;
+
+    li {
+      margin-left: 10%;
     }
+  }
 
-   
-}
-
-.mobile-menu-bottom-container{
+  .mobile-menu-bottom-container {
     width: 100%;
     height: 12%;
     margin-bottom: 5vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    column-gap:10%;
+    column-gap: 10%;
     background-color: $color_background;
-    
-    >.icon-container{
-        height: 60%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        svg{
-            path{
-                fill:$color_cyan;
-            }
+
+    > .icon-container {
+      height: 60%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      svg {
+        path {
+          fill: $color_cyan;
         }
-        
- 
+      }
     }
-}
+  }
 
-
-
-.mobile-menu-socialMedia-container{
-   
+  .mobile-menu-socialMedia-container {
     width: 100%;
     height: 7%;
     display: flex;
     justify-content: center;
     align-items: center;
 
-    button{
-        height:100% ;
-        width: 70%;
-        border-radius: 6px;
-        color:#ffff;
-        background-color: $color_purple;
-        border: none;
+    button {
+      height: 100%;
+      width: 70%;
+      border-radius: 6px;
+      color: #ffff;
+      background-color: $color_purple;
+      border: none;
     }
 
-
-    >.icon-container{
-        height: 100%;
+    > .icon-container {
+      height: 100%;
     }
-    
-   
-
+  }
 }
