--- a/src/ui/styles/_mobileNavbar.scss
+++ b/src/ui/styles/_mobileNavbar.scss
@@ -1,44 +1,96 @@
 @import "../../styles//variables.scss";
 
-.mobile-navbar-container{
-    position: fixed;
-    width: 100vw;
-    height: 9vh;
-    background-color: $color_background;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    z-index: 50;
 
-    >.icon-container{
-        position: relative;
-        height: 50%;
-        margin-left: 3%;
-        margin-right: 5%;
 
-        strong{
-            position: absolute;
-            top: 0%;
-            width: 1.5rem;
-           aspect-ratio: 1;
-            font-size: 1.4rem;
-            color: #ffff;
-            background-color: $color_cyan;
-            border-radius: 50%;
-            margin: 0 auto;
-            padding: 5%;
-            text-align: center;
+
+@media screen and (max-width: 1024px) {
+    .mobile-navbar-container{
+        position: fixed;
+        width: 100vw;
+        height: 12vh;
+        background-color: $color_background;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        z-index: 50;
     
-            
+        >.icon-container{
+            position: relative;
+            height: 50%;
+            margin-left: 3%;
+            margin-right: 5%;
+    
+            strong{
+                position: absolute;
+                top: 0%;
+                width: 1.5rem;
+               aspect-ratio: 1;
+                font-size: 1.4rem;
+                color: #ffff;
+                background-color: $color_cyan;
+                border-radius: 50%;
+                margin: 0 auto;
+                padding: 5%;
+                text-align: center;
+        
+                
+            }
+           
         }
-       
-    }
-    >.image-container{
-        height: 70%;
-        img{
-            object-fit: cover;
-            height: 100%;
+        >.image-container{
+            height: 70%;
+            img{
+                object-fit: cover;
+                height: 100%;
+            }
         }
+    
     }
+    
+}
 
+@media screen and (max-width: 678px) {
+    .mobile-navbar-container{
+        position: fixed;
+        width: 100vw;
+        height: 9vh;
+        background-color: $color_background;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        z-index: 50;
+    
+        >.icon-container{
+            position: relative;
+            height: 50%;
+            margin-left: 3%;
+            margin-right: 5%;
+    
+            strong{
+                position: absolute;
+                top: 0%;
+                width: 1.5rem;
+               aspect-ratio: 1;
+                font-size: 1.4rem;
+                color: #ffff;
+                background-color: $color_cyan;
+                border-radius: 50%;
+                margin: 0 auto;
+                padding: 5%;
+                text-align: center;
+        
+                
+            }
+           
+        }
+        >.image-container{
+            height: 70%;
+            img{
+                object-fit: cover;
+                height: 100%;
+            }
+        }
+    
+    }
+    
 }
